syntax = "proto3";

package cunicu.rpc;
option go_package = "github.com/stv0g/cunicu/pkg/proto/rpc";

import "core/interface.proto";
import "common.proto";
import "rpc/event.proto";

message StatusResp {
    repeated core.Interface interfaces = 1;
}

message StatusParams {
    string intf = 1;
    bytes peer = 2;
}

message SetConfigParams {
    map<string, string> settings = 1;
}

message GetConfigParams {
    string key_filter = 1;
}

message GetConfigResp {
    map<string, string> settings = 1;
}

service Daemon {
    rpc GetBuildInfo(Empty) returns (BuildInfo) {}
    rpc StreamEvents(Empty) returns (stream Event) {}
    rpc UnWait(Empty) returns (Empty) {}
    rpc Stop(Empty) returns (Empty) {}
    rpc Restart(Empty) returns (Empty) {}
    rpc Sync(Empty) returns (Empty) {}
    rpc GetStatus(StatusParams) returns (StatusResp) {}
    rpc SetConfig(SetConfigParams) returns (Empty) {}
    rpc GetConfig(GetConfigParams) returns (GetConfigResp) {}
}